--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
     "description": "Dynamic Server",
     "version": "1.0.0",
     "author": {
-        "name": "",
-        "email": ""
+        "name": "Logan Farner",
+        "email": "logan.farner@stthomas.edu"
+        
     },
     "contributors": [
+        {
+            "name": "Prince Sarpong",
+            "email": "sarp4474@stthomas.edu"
+        },
+        {
+            "name": "Gratzia Maria",
+            "email": "inda4434@stthomas.edu"
+        }
     ],
     "repository": {},
     "dependencies": {
         "express": "^4.18.2",
+        "plotly": "^1.0.6",
         "sqlite3": "^5.1.6"
     }
 }
